# sd-rate-limiter-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  design.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
src/: __init__.py
src/rate_limiter/: __init__.py  config.py  main.py  middleware.py
src/rate_limiter/models/: bucket.py  rule.py
src/rate_limiter/routers/: ratelimit.py  rules.py
src/rate_limiter/schemas/: check.py  rule.py
src/rate_limiter/services/: extractor.py  registry.py  sliding_window.py  token_bucket.py
tests/: conftest.py  test_healthz.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_client_identification.py  test_fr2_token_bucket.py  test_fr3_rejection_headers.py  test_fr4_algorithm_support.py
